--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@auth0/angular-jwt": "^5.2.0",
     "@tailwindcss/forms": "^0.5.7",
     "antd": "^5.17.0",
+    "chart.js": "^4.4.3",
     "flowbite": "^2.3.0",
     "ng-zorro-antd": "^15.1.1",
+    "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.3",
     "tslib": "^2.3.0",
@@ -35,6 +37,7 @@
     "@angular-devkit/build-angular": "^15.2.6",
     "@angular/cli": "~15.2.6",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/chart.js": "^2.9.41",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
